k8s/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-java
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-java
  template:
    metadata:
      labels:
        app: demo-java
    spec:
      tolerations:
        - key: "infra"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      nodeSelector:
        infra: "true"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: demo-java
          image: devopsfinch/demo-java-glowroot:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 45
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 5
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: glowroot
              mountPath: /opt/glowroot
      volumes:
        - name: glowroot
          emptyDir: {}
