k8s/50-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: observability
  labels:
    app: netshoot
spec:
  tolerations:
    - key: "infra"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
  containers:
    - name: netshoot
      image: nicolaka/netshoot:latest
      imagePullPolicy: IfNotPresent
      command: ["sleep", "3650d"]
      securityContext:
        allowPrivilegeEscalation: false
      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 200m
          memory: 256Mi
