k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glowroot-central
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: glowroot.finchsolucoes.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glowroot-central
                port:
                  name: ui
  tls:
    - hosts:
        - glowroot.finchsolucoes.com.br
      secretName: finch-tls-cert
